@@ -2,3 +2,4 @@ pub mod bootstrap;
 pub mod data;
 pub mod download;
 pub mod update;
+pub mod utils;
