@@ -48,7 +48,7 @@
             <p class="titlebar__version-text">v5.0.0</p>
             <div class="titlebar__buttons">
                 <button class="button__titlebar-mini-button" id="titlebar-reset-button"><img
-                        src="common/assets/images/trash.png"></button>
+                        src="common/assets/images/reset.png"></button>
                 <button class="button__titlebar-mini-button" id="titlebar-history-edit-button"><img
                         src="common/assets/images/history.png"></button>
                 <div style="width: 1px;"></div>
@@ -199,6 +199,9 @@
                     <img src="common/assets/images/folder.png">
                 </button>
                 <input type="text" class="textbox textbox--output-path" id="output-path-textbox">
+                <button class="button image-button button--output-path-open" id="output-path-open-button">
+                    <img src="common/assets/images/open.png">
+                </button>
             </div>
 
             <div class="panel panel--output-queue">
