@@ -1,4 +1,5 @@
 ~ v5.1.0
+- Added a navigate path button
 - Fixed an issue with the header texts being displayed incorrectly
 
 ~ v5.0.0
